--- a/src/layouts/LocaleBaseLayout.astro
+++ b/src/layouts/LocaleBaseLayout.astro
@@ -62,8 +62,7 @@ if (prependTitle) {
 
 <style>
   :root {
-    --font-family: system-ui, -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, Arial, "Hiragino Sans GB",
-      "Segoe UI", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+    --font-family: system-ui, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
       "Segoe UI Symbol", "Noto Color Emoji";
     font-family: "Inter", var(--font-family);
   }
