--- a/src/pages/zh/_index/Profile.astro
+++ b/src/pages/zh/_index/Profile.astro
@@ -1,5 +1,5 @@
 ---
-import { socials } from "~data/en/socials"
+import { socials } from "~data/zh/socials"
 import AppLink from "~components/AppLink.astro"
 import LocaleToggleLocale from "~components/LocaleToggleLocale.astro"
 import LocaleToggleColorScheme from "~components/LocaleToggleColorScheme.astro"
