--- a/src/pages/zh/_index/Project.astro
+++ b/src/pages/zh/_index/Project.astro
@@ -1,6 +1,6 @@
 ---
 import type { IProject } from "~types/project"
-import { projects } from "~data/en/projects"
+import { projects } from "~data/zh/projects"
 import { mostRecentYearComparator } from "~utils/comparators"
 import ProjectDetails from "./ProjectDetails.astro"
 import AppLink from "~components/AppLink.astro"
